fixed filter visibility

--- a/src/app/document/list/list.component.css
+++ b/src/app/document/list/list.component.css
@@ -16,6 +16,7 @@ app-element {
 }
 
 .header {
-    margin-bottom: 1%;    
+    margin-bottom: 1%;  
+    height: 100px;  
 }
 
